--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,10 @@ jobs:
           vs-version: latest
 
       - name: Build EXE
-        run: |
-          msbuild KbChatterBlocker.cpp /p:Configuration=Release /p:Platform=x64 /p:OutDir=.
+        run: msbuild KbChatterBlocker.vcxproj /p:Configuration=Release /p:Platform=x64
 
       - name: Upload EXE
         uses: actions/upload-artifact@v4
         with:
           name: chatter-blocker-exe
-          path: KbChatterBlocker.exe
+          path: Release\x64\KbChatterBlocker.exe
